<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlBottomSheetChangeAvatar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <Button
        android:id="@+id/btnChupAnh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/ic_camera"
        android:drawableTint="@color/Primary40"
        android:fontFamily="@font/roboto_medium"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/photo"
        android:textAllCaps="false"
        android:textColor="@color/Primary10"
        android:textSize="14sp"
        tools:ignore="RtlHardcoded,VisualLintButtonSize"
        tools:targetApi="m" />

    <Button
        android:id="@+id/btnChonAnh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnChupAnh"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/ic_gallery"
        android:drawableTint="@color/Primary40"
        android:fontFamily="@font/roboto_medium"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/choose_image"
        android:textAllCaps="false"
        android:textColor="@color/Primary10"
        android:textSize="14sp"
        tools:ignore="RtlHardcoded,VisualLintButtonSize"
        tools:targetApi="m" />

    <Button
        android:id="@+id/btnXoaAnh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnChonAnh"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/ic_delete"
        android:drawableTint="@color/Primary40"
        android:fontFamily="@font/roboto_medium"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/delete_avatar"
        android:textAllCaps="false"
        android:textColor="@color/Primary10"
        android:textSize="14sp"
        tools:ignore="RtlHardcoded,VisualLintButtonSize"
        tools:targetApi="m" />
</RelativeLayout>
