<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flRecent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_frame_recent">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivAvatarRecent"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:src="@drawable/avt_1"
            android:elevation="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_online"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="45dp"
            android:elevation="10dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ivAvatarRecent">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.02"
                android:text="@string/username"
                android:textColor="@color/Black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsername"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.02"
                android:text="@string/content_message"
                android:textColor="@color/Black"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvTimeReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_receive"
            android:textColor="@color/Primary40"
            android:textSize="10sp"
            android:layout_alignParentRight="true"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            />
    </RelativeLayout>

</FrameLayout>