<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flMessage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_popup_chat"
    android:orientation="vertical"
    android:padding="10dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <ImageButton
            android:id="@+id/ibNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_notification"
            android:contentDescription="@string/notification" />

        <ImageButton
            android:id="@+id/ibReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_return"
            android:contentDescription="@string/back" />

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/avt_1" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/color1"
                android:textSize="12sp"
                android:letterSpacing="0.02"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_message_receive"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:text="@string/content_message"
            android:textColor="@color/color1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_message_send"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:text="@string/content_message"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTimeReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="8sp"
            android:text="Bây gờ"
            android:textAlignment="center"
            android:textColor="#4D000000"
            android:textSize="8sp" />

        <RelativeLayout
            android:id="@+id/rlInputMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom">

            <EditText
                android:id="@+id/etInputSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/type_message_here"
                android:inputType="text"
                android:paddingLeft="35dp"
                android:paddingRight="20dp"
                android:textColor="@color/color1"
                android:textColorHint="#802F2E41"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/ibSendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="5dp"
                android:background="@color/transparent"
                android:contentDescription="@string/send_message"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_send_message"
                android:text="" />
        </RelativeLayout>
    </LinearLayout>


</FrameLayout>