<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flMessage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".acti.boxchat.BoxChatActivity">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blurOverlayColor="#33000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/flTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingRight="30dp"
        android:background="@drawable/bg_frame_input"
        android:elevation="10dp"
        android:paddingLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/ic_notification"
            android:contentDescription="@string/notification"
            android:elevation="5dp" />

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:backgroundTint="@color/Primary10"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:elevation="5dp" />

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:src="@drawable/avt_1" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="12sp"
                android:letterSpacing="0.02"
                android:paddingBottom="5dp" />
        </LinearLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvMessage"
            app:layout_constraintBottom_toTopOf="@id/rlInputMessage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
            android:id="@+id/rlInputMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/etInputSearch"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_frame_input"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/type_message_here"
                android:inputType="text"
                android:keepScreenOn="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/Outline"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/ibSendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:background="@color/transparent"
                android:contentDescription="@string/send_message"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_send_message"
                android:text="" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>